--- a/views/index.ejs
+++ b/views/index.ejs
@@ -13,5 +13,8 @@
   <h1><%= title %></h1>
   <p>Welcome to <%= title %></p>
   <!--Script Section-->
+  <script src="/jquery/dist/jquery.min.js"></script>
+  <script src="/bootstrap/dist/js/bootstrap.min.js"></script>
+  <script src="/Scripts/app.js"></script>
 </body>
 </html>
